--- a/sections/program.html
+++ b/sections/program.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Semantic-Aware Navigation and Mapping</h1>
+    <h1>SeMaNa: Semantic-Aware Mapping and Navigation </h1>
     <h2>Towards Cognitive and Adaptive Robots</h2>
     <p><strong>ICRA 2026 Workshop</strong> – May 2026</p>
   </header>
