--- a/index.html
+++ b/index.html
@@ -32,62 +32,78 @@
 
   <section id="speakers">
     <h2>Speakers</h2>
-    <ul>
-      <li>Sto Cazzo - Tu Madre University</li>
-      <li>Other Names – TBD</li>
-    </ul>
+    <div class="organizer-grid">
+
+        <!-- Speaker 1 -->
+        <a href="https://www.example.com" target="_blank" class="organizer-card">
+        <img src="images/federicorollo.jpg" alt="Speaker" />
+        <div class="info">
+            <h4>Speaker 1</h4>
+            <p>Affiliation</p>
+        </div>
+        </a>
+
   </section>
 
   <section id="organizers">
     <h2>Organizers</h2>
-<div class="organizer-grid">
-    <!-- Organizer 1 -->
-    <a href="https://federicorollo.github.io/" target="_blank" class="organizer-card">
-      <img src="images/federicorollo.jpg" alt="Federico Rollo" />
-      <div class="info">
-        <h4>Federico Rollo</h4>
-        <p>Leonardo SpA & IIT</p>
-      </div>
-    </a>
+    <div class="organizer-grid">
 
-    <!-- Organizer 2 -->
-    <a href="https://example.com" target="_blank" class="organizer-card">
-      <img src="images/another-organizer.jpg" alt="Another Organizer" />
-      <div class="info">
-        <h4>Another Name</h4>
-        <p>University of Robotics</p>
-      </div>
-    </a>
+        <!-- Federico Rollo -->
+        <a href="https://federicorollo.github.io/" target="_blank" class="organizer-card">
+        <img src="images/federicorollo.jpg" alt="Federico Rollo" />
+        <div class="info">
+            <h4>Federico Rollo</h4>
+            <p>Leonardo SpA</p>
+        </div>
+        </a>
 
-    <!-- Organizer 2 -->
-    <a href="https://example.com" target="_blank" class="organizer-card">
-      <img src="images/another-organizer.jpg" alt="Another Organizer" />
-      <div class="info">
-        <h4>Another Name</h4>
-        <p>University of Robotics</p>
-      </div>
-    </a>
+        <!-- Chen Wang -->
+        <a href="https://sairlab.org/chenw/" target="_blank" class="organizer-card">
+        <img src="images/chenwang.jpg" alt="Chen Wang" />
+        <div class="info">
+            <h4>Chen Wang</h4>
+            <p>University of Buffalo</p>
+        </div>
+        </a>
 
-    <!-- Organizer 2 -->
-    <a href="https://example.com" target="_blank" class="organizer-card">
-      <img src="images/another-organizer.jpg" alt="Another Organizer" />
-      <div class="info">
-        <h4>Another Name</h4>
-        <p>University of Robotics</p>
-      </div>
-    </a>
+        <!-- Marija Popović -->
+        <a href="https://scholar.google.com/citations?user=XON8iQoAAAAJ&hl=en" target="_blank" class="organizer-card">
+        <img src="images/marijapopovic.jpeg" alt="Marija Popović" />
+        <div class="info">
+            <h4>Marija Popović</h4>
+            <p>TU Delft</p>
+        </div>
+        </a>
 
-    <!-- Organizer 2 -->
-    <a href="https://example.com" target="_blank" class="organizer-card">
-      <img src="images/another-organizer.jpg" alt="Another Organizer" />
-      <div class="info">
-        <h4>Another Name</h4>
-        <p>University of Robotics</p>
-      </div>
-    </a>
+        <!-- Sourav Garg -->
+        <a href="https://oravus.github.io/" target="_blank" class="organizer-card">
+        <img src="images/souravgarg.jpg" alt="Sourav Garg" />
+        <div class="info">
+            <h4>Sourav Garg</h4>
+            <p>University of Adelaide</p>
+        </div>
+        </a>
 
+        <!-- Nuri Kim -->
+        <a href="https://bareblackfoot.github.io/" target="_blank" class="organizer-card">
+        <img src="images/nurikim.jpg" alt="Nuri Kim" />
+        <div class="info">
+            <h4>Nuri Kim</h4>
+            <p>Jeonbuk National University</p>
+        </div>
+        </a>
 
-  </div>
+        <!-- Nicky Zimmerman -->
+        <a href="https://scholar.google.com/citations?user=FrYCE4EAAAAJ&hl=en" target="_blank" class="organizer-card">
+        <img src="images/nickyzimmerman.jpeg" alt="Nicky Zimmerman" />
+        <div class="info">
+            <h4>Nicky Zimmerman</h4>
+            <p>National University of Singapore</p>
+        </div>
+        </a>
+
+    </div>
   </section>
 
 
