--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <nav id="nav" class="sticky-nav">
     <ul>
-      <li><a href="/index.html">Overview</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="#speakers">Speakers</a></li>
       <li><a href="#organizers">Organizers</a></li>
       <li><a href="#contact">Contact</a></li>
