--- a/sections/cfp.html
+++ b/sections/cfp.html
@@ -16,7 +16,7 @@
 
   <nav id="nav" class="sticky-nav">
     <ul>
-      <li><a href="/index.html">Overview</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="/index.html#speakers">Speakers</a></li>
       <li><a href="/index.html#organizers">Organizers</a></li>
       <li><a href="/index.html#contact">Contact</a></li>
