bio on organizer card not used now

--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
 
         <!-- Federico Rollo -->
         <a href="https://federicorollo.github.io/" target="_blank" class="organizer-card">
-        <img src="images/federicorollo.jpg" alt="Federico Rollo" />
-        <div class="info">
-            <h4>Federico Rollo</h4>
-            <p>Leonardo SpA</p>
-        </div>
+          <div class="organizer-img">
+            <img src="images/federicorollo.jpg" alt="Federico Rollo" />
+            <!-- Used for bio, if needed -->
+            <!-- <div class="bio-overlay"> 
+              <p>Researcher in AI and Robotics, working on semantic SLAM and perception.</p>
+            </div> -->
+          </div>
+        <!-- <img src="images/federicorollo.jpg" alt="Federico Rollo" /> -->
+          <div class="info">
+              <h4>Federico Rollo</h4>
+              <p>Leonardo SpA</p>
+          </div>
         </a>
 
         <!-- Chen Wang -->
