--- a/index.html
+++ b/index.html
@@ -32,17 +32,37 @@
 
   <section id="speakers">
     <h2>Speakers</h2>
-    <div class="organizer-grid">
+    
+    <!-- Speaker 1 -->
+    <a href="https://www.example.com" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Speaker 1" />
+      <div class="speaker-info">
+        <h3>Dr. Speaker 1</h3>
+        <p><strong>University of Robotics</strong></p>
+        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+      </div>
+    </a>
 
-        <!-- Speaker 1 -->
-        <a href="https://www.example.com" target="_blank" class="organizer-card">
-        <img src="images/federicorollo.jpg" alt="Speaker" />
-        <div class="info">
-            <h4>Speaker 1</h4>
-            <p>Affiliation</p>
-        </div>
-        </a>
+    <!-- Speaker 2 -->
+    <a href="https://www.example.com" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Speaker 1" />
+      <div class="speaker-info">
+        <h3>Dr. Speaker 2</h3>
+        <p><strong>University of Robotics</strong></p>
+        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+      </div>
+    </a>
 
+    <!-- Speaker 3 -->
+    <a href="https://www.example.com" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Speaker 1" />
+      <div class="speaker-info">
+        <h3>Dr. Speaker 3</h3>
+        <p><strong>University of Robotics</strong></p>
+        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+      </div>
+    </a>
+    
   </section>
 
   <section id="organizers">
