adding speakers and kevin

--- a/index.html
+++ b/index.html
@@ -34,30 +34,80 @@
     <h2>Speakers</h2>
     
     <!-- Speaker 1 -->
-    <a href="https://www.example.com" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Speaker 1" />
+    <a href="https://lucacarlone.mit.edu/" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Luca Carlone" />
       <div class="speaker-info">
-        <h3>Dr. Speaker 1</h3>
+        <h3>Luca Carlone</h3>
         <p><strong>University of Robotics</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
     <!-- Speaker 2 -->
-    <a href="https://www.example.com" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Speaker 1" />
+    <a href="http://www.kostasalexis.com/" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Kostas Alexis" />
       <div class="speaker-info">
-        <h3>Dr. Speaker 2</h3>
+        <h3>Kostas Alexis</h3>
         <p><strong>University of Robotics</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
     <!-- Speaker 3 -->
-    <a href="https://www.example.com" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Speaker 1" />
+    <a href="https://www.ri.cmu.edu/ri-faculty/sebastian-scherer/" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Sebastian Scherer" />
       <div class="speaker-info">
-        <h3>Dr. Speaker 3</h3>
+        <h3>Sebastian Scherer</h3>
+        <p><strong>University of Robotics</strong></p>
+        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+      </div>
+    </a>
+
+    <!-- Speaker -->
+    <a href="https://n.ethz.ch/~cesarc/" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Cesar Cadena" />
+      <div class="speaker-info">
+        <h3>Cesar Cadena</h3>
+        <p><strong>University of Robotics</strong></p>
+        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+      </div>
+    </a>
+
+    <!-- Speaker -->
+    <a href="https://www.comp.nus.edu.sg/~dyhsu/" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="David Hsu" />
+      <div class="speaker-info">
+        <h3>David Hsu</h3>
+        <p><strong>University of Robotics</strong></p>
+        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+      </div>
+    </a>
+
+    <!-- Speaker -->
+    <a href="https://ganlumomo.github.io/" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Lu Gan" />
+      <div class="speaker-info">
+        <h3>Lu Gan</h3>
+        <p><strong>University of Robotics</strong></p>
+        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+      </div>
+    </a>
+
+        <!-- Speaker -->
+    <a href="https://bucherb.github.io/" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Bernadette Bucher" />
+      <div class="speaker-info">
+        <h3>Bernadette Bucher</h3>
+        <p><strong>University of Robotics</strong></p>
+        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+      </div>
+    </a>
+
+        <!-- Speaker -->
+    <a href="https://robodhruv.github.io/" target="_blank" class="speaker-card">
+      <img src="images/federicorollo.jpg" alt="Drhuv Shah" />
+      <div class="speaker-info">
+        <h3>Drhuv Shah</h3>
         <p><strong>University of Robotics</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
@@ -127,6 +177,15 @@
         <div class="info">
             <h4>Nicky Zimmerman</h4>
             <p>National University of Singapore</p>
+        </div>
+        </a>
+
+        <!-- Kevin Doherty -->
+        <a href="https://scholar.google.com/citations?user=FrYCE4EAAAAJ&hl=en" target="_blank" class="organizer-card">
+        <img src="images/kevindoherty.jpg" alt="Kevin Doherty" />
+        <div class="info">
+            <h4>Kevin Doherty</h4>
+            <p>Boston Dynamics</p>
         </div>
         </a>
 
