--- a/index.html
+++ b/index.html
@@ -35,80 +35,80 @@
     
     <!-- Speaker 1 -->
     <a href="https://lucacarlone.mit.edu/" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Luca Carlone" />
+      <img src="images/speakers/carlone.jpeg" alt="Luca Carlone" />
       <div class="speaker-info">
         <h3>Luca Carlone</h3>
-        <p><strong>University of Robotics</strong></p>
+        <p><strong>Massachusetts Institute of Technology (MIT)</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
     <!-- Speaker 2 -->
     <a href="http://www.kostasalexis.com/" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Kostas Alexis" />
+      <img src="images/speakers/alexis.jpg" alt="Kostas Alexis" />
       <div class="speaker-info">
         <h3>Kostas Alexis</h3>
-        <p><strong>University of Robotics</strong></p>
+        <p><strong>Norwegian University of Science and Technology (NTNU)</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
     <!-- Speaker 3 -->
     <a href="https://www.ri.cmu.edu/ri-faculty/sebastian-scherer/" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Sebastian Scherer" />
+      <img src="images/speakers/scherer.jpg" alt="Sebastian Scherer" />
       <div class="speaker-info">
         <h3>Sebastian Scherer</h3>
-        <p><strong>University of Robotics</strong></p>
+        <p><strong>Carnegie Mellon University (CMU)</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
     <!-- Speaker -->
     <a href="https://n.ethz.ch/~cesarc/" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Cesar Cadena" />
+      <img src="images/speakers/cadena.png" alt="Cesar Cadena" />
       <div class="speaker-info">
         <h3>Cesar Cadena</h3>
-        <p><strong>University of Robotics</strong></p>
+        <p><strong>Eidgenössische Technische Hochschule (ETH)</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
     <!-- Speaker -->
     <a href="https://www.comp.nus.edu.sg/~dyhsu/" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="David Hsu" />
+      <img src="images/speakers/hsu.jpeg" alt="David Hsu" />
       <div class="speaker-info">
         <h3>David Hsu</h3>
-        <p><strong>University of Robotics</strong></p>
+        <p><strong>National University of Singapore</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
     <!-- Speaker -->
     <a href="https://ganlumomo.github.io/" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Lu Gan" />
+      <img src="images/speakers/gan.jpg" alt="Lu Gan" />
       <div class="speaker-info">
         <h3>Lu Gan</h3>
-        <p><strong>University of Robotics</strong></p>
+        <p><strong>Georgia Institute of Technology</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
         <!-- Speaker -->
     <a href="https://bucherb.github.io/" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Bernadette Bucher" />
+      <img src="images/speakers/bucher.png" alt="Bernadette Bucher" />
       <div class="speaker-info">
         <h3>Bernadette Bucher</h3>
-        <p><strong>University of Robotics</strong></p>
+        <p><strong>University of Michigan</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
 
         <!-- Speaker -->
     <a href="https://robodhruv.github.io/" target="_blank" class="speaker-card">
-      <img src="images/federicorollo.jpg" alt="Drhuv Shah" />
+      <img src="images/speakers/shah.jpeg" alt="Drhuv Shah" />
       <div class="speaker-info">
         <h3>Drhuv Shah</h3>
-        <p><strong>University of Robotics</strong></p>
+        <p><strong>Google DeepMind</strong></p>
         <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
       </div>
     </a>
