update speakers info

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="speaker-info">
         <h3>Luca Carlone</h3>
         <p><strong>Massachusetts Institute of Technology (MIT)</strong></p>
-        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+        <p>Luca Carlone is an Associate Professor at MIT, leading the SPARK Lab where he focuses on enabling human-level perception and world understanding for mobile robots. His research centers on robust and efficient sensing, perception, and decision-making for single and multi-robot systems, leveraging nonlinear estimation, probabilistic inference, and geometric computer vision.</p>
       </div>
     </a>
 
@@ -49,7 +49,7 @@
       <div class="speaker-info">
         <h3>Kostas Alexis</h3>
         <p><strong>Norwegian University of Science and Technology (NTNU)</strong></p>
-        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+        <p>Kostas Alexis is a Full Professor at NTNU, specializing in establishing true navigational and operational autonomy for robotics, particularly aerial systems. His work encompasses control, optimization, and path-planning, with a keen interest in designing novel aerial platforms.</p>
       </div>
     </a>
 
@@ -59,7 +59,7 @@
       <div class="speaker-info">
         <h3>Sebastian Scherer</h3>
         <p><strong>Carnegie Mellon University (CMU)</strong></p>
-        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+        <p>Sebastian Scherer is an Associate Research Professor at Carnegie Mellon University's Robotics Institute, dedicated to "resilient robotics" that enables safe and reliable autonomous robot operation in uncertain environments. He explores robust algorithms, systems, and continuous improvement methods, applying machine learning to perception, state estimation, and planning for various applications including subterranean exploration and autonomous flight.</p>
       </div>
     </a>
 
@@ -69,7 +69,7 @@
       <div class="speaker-info">
         <h3>Cesar Cadena</h3>
         <p><strong>Eidgenössische Technische Hochschule (ETH)</strong></p>
-        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+        <p>Cesar Cadena is a Senior Scientist at ETH Zurich, where he leads the Perception, Mapping and Navigation team at the Robotics Systems Lab and is managing director of the ETH RobotX initiative. His research is at the intersection of perception and learning, focusing on robust and introspective systems for robotic scene understanding, including semantic mapping, localization, and persistent mapping in dynamic environments.</p>
       </div>
     </a>
 
@@ -79,7 +79,7 @@
       <div class="speaker-info">
         <h3>David Hsu</h3>
         <p><strong>National University of Singapore</strong></p>
-        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+        <p>David Hsu is a Provost's Chair Professor at the National University of Singapore and Director of the Smart Systems Institute. An IEEE Fellow, his research interests span robotics, AI, and computational structural biology, with a current emphasis on robot planning and learning under uncertainty, as well as human-robot collaboration.</p>
       </div>
     </a>
 
@@ -89,7 +89,7 @@
       <div class="speaker-info">
         <h3>Lu Gan</h3>
         <p><strong>Georgia Institute of Technology</strong></p>
-        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+        <p>Lu Gan is an Assistant Professor at Georgia Tech, leading the Lunar Lab and focusing on robotics, computer vision, and machine learning. His group develops autonomous systems for ground, air, and space applications, utilizing computer vision, machine learning, estimation, and probabilistic inference for robot perception, learning, and navigation.</p>
       </div>
     </a>
 
@@ -99,7 +99,7 @@
       <div class="speaker-info">
         <h3>Bernadette Bucher</h3>
         <p><strong>University of Michigan</strong></p>
-        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+        <p>Bernadette Bucher is an Assistant Professor in the Robotics and Computer Science and Engineering Departments at the University of Michigan. Her research integrates robotics, computer vision, and machine learning, with a focus on learning interpretable visual representations and estimating their uncertainty for autonomous mobile manipulation and scientific tasks.</p>
       </div>
     </a>
 
@@ -109,7 +109,7 @@
       <div class="speaker-info">
         <h3>Drhuv Shah</h3>
         <p><strong>Google DeepMind</strong></p>
-        <p>Dr. Speaker is a pioneer in robotic reasoning, known for her work on adaptive planning in semantic environments and decision systems in multi-agent mobile platforms.</p>
+        <p>Dhruv Shah is a Senior Research Scientist at Google DeepMind and will be an Assistant Professor at Princeton University, with a general interest in creating intelligent and reliable robotic systems for challenging environments. His work explores foundation models for robotics, large-scale robot learning, reinforcement learning, and human-robot interactions.</p>
       </div>
     </a>
     
