--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <h1>SeMaNa: Semantic-Aware Mapping and Navigation </h1>
     <h2>Towards Cognitive and Adaptive Robots</h2>
-    <p><strong>ICRA 2026 Workshop</strong> – May 2026</p>
+    <p><strong>ICRA 2026 Workshop</strong> </br> May 2026</p>
   </header>
 
   <nav id="nav" class="sticky-nav">
@@ -27,7 +27,7 @@
   
   <section id="overview">
     <h2>Overview</h2>
-    <p>This workshop will focus on the latest advances in semantic-aware navigation and mapping, exploring how robots can evolve toward cognitive and adaptive behaviors. It aims to bring together researchers from robotics, AI, and related fields to discuss algorithms, systems, and applications that push the boundaries of perception-driven autonomy.</p>
+    <p>Robots navigating complex, dynamic environments must go beyond geometry; they need to understand the semantics of the world. This workshop aims to bring together researchers from robotics, AI, and computer vision to discuss how semantic representations, learned scene understanding, and cognitive mapping can enable truly adaptive robot navigation. It will focus on the latest advances in semantic-aware mapping and navigation, exploring how robots can evolve toward cognitive and adaptive behaviors. Topics include semantic SLAM, topological and graph-based maps, human-aware navigation, and learning-based reasoning. Through invited talks, contributed papers, and panel discussions, we aim to stimulate cross-disciplinary conversation and identify key challenges and future directions. The event will emphasize interaction between early-career researchers and leading experts from academia and industry. The workshop is open to participants both onsite and remotely.</p>
   </section>
 
   <section id="speakers">
