--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: federico.rollo@leonardo.com</p>
+    <p>Email: <a href="mailto:semana.icra@gmail.com">semana.icra@gmail.com</a></p>
   </section>
 
   <footer>
