--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
     </a>
 
-        <!-- Speaker -->
+    <!-- Speaker -->
     <a href="https://bucherb.github.io/" target="_blank" class="speaker-card">
       <img src="images/speakers/bucher.png" alt="Bernadette Bucher" />
       <div class="speaker-info">
@@ -103,13 +103,23 @@
       </div>
     </a>
 
-        <!-- Speaker -->
+    <!-- Speaker -->
     <a href="https://robodhruv.github.io/" target="_blank" class="speaker-card">
       <img src="images/speakers/shah.jpeg" alt="Drhuv Shah" />
       <div class="speaker-info">
         <h3>Drhuv Shah</h3>
         <p><strong>Google DeepMind</strong></p>
         <p>Dhruv Shah is a Senior Research Scientist at Google DeepMind and will be an Assistant Professor at Princeton University, with a general interest in creating intelligent and reliable robotic systems for challenging environments. His work explores foundation models for robotics, large-scale robot learning, reinforcement learning, and human-robot interactions.</p>
+      </div>
+    </a>
+
+    <!-- Speaker -->
+    <a href="https://www.doc.ic.ac.uk/~ajd/" target="_blank" class="speaker-card">
+      <img src="/images/speakers/davison.png" alt="Andrew Davison" />
+      <div class="speaker-info">
+        <h3>Andrew Davison</h3>
+        <p><strong>Imperial College London</strong></p>
+        <p>Andrew Davison is a Professor of Robot Vision at the Department of Computing, Imperial College London, where he leads the Robot Vision Research Group. He is a pioneer in SLAM (Simultaneous Localisation and Mapping) using vision, notably developing the MonoSLAM algorithm. His current research focuses on "Spatial AI," aiming to enhance real-time 3D vision. He is also a co-founder of SLAMcore, a start-up specializing in applied Spatial AI.</p>
       </div>
     </a>
     
@@ -128,7 +138,6 @@
               <p>Researcher in AI and Robotics, working on semantic SLAM and perception.</p>
             </div> -->
           </div>
-        <!-- <img src="images/federicorollo.jpg" alt="Federico Rollo" /> -->
           <div class="info">
               <h4>Federico Rollo</h4>
               <p>Leonardo SpA</p>
