--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   </section>
 
   <footer>
-    &copy; 2026 ICRA Workshop | Semantic-Aware Navigation and Mapping
+    &copy; 2026 ICRA Workshop | SeMaNa: Semantic-Aware Navigation and Mapping
   </footer>
 </body>
 </html>
