--- a/sections/cfp.html
+++ b/sections/cfp.html
@@ -40,7 +40,7 @@
 
 
   <footer>
-    &copy; 2026 ICRA Workshop | Semantic-Aware Navigation and Mapping
+    &copy; 2026 ICRA Workshop |  SeMaNa: Semantic-Aware Navigation and Mapping
   </footer>
 </body>
 </html>
