--- a/sections/program.html
+++ b/sections/program.html
@@ -11,7 +11,7 @@
   <header>
     <h1>SeMaNa: Semantic-Aware Mapping and Navigation </h1>
     <h2>Towards Cognitive and Adaptive Robots</h2>
-    <p><strong>ICRA 2026 Workshop</strong> – May 2026</p>
+    <p><strong>ICRA 2026 Workshop</strong> </br> May 2026</p>
   </header>
 
   <nav id="nav" class="sticky-nav">
