--- a/sections/program.html
+++ b/sections/program.html
@@ -26,8 +26,100 @@
   </nav>
 
   <section id="program">
-    <h2>Program</h2>
-    <p>Coming soon. Includes keynotes, paper presentations, and panel discussions.</p>
+    <div class="table-container shadow-lg rounded-lg">
+      <h1 class="text-3xl font-bold text-center py-6 bg-white rounded-t-lg border-b border-gray-200">Workshop Program Schedule</h1>
+      <table>
+      <thead>
+        <tr>
+          <th class="rounded-tl-lg">Time</th>
+          <th>Type</th>
+          <th>Presenter</th>
+          <th class="rounded-tr-lg">Talk</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>9:00 - 9:10</td>
+          <td colspan="2">Opening</td>
+          <td>workshop presentation</td>
+        </tr>
+        <tr>
+          <td rowspan="2">9:10 - 10:10</td>
+          <td rowspan="2">Speaker Session 1 <br/> Semantic mapping evolution</td>
+          <td>Andrew Davison</td>
+          <td>From SLAM to Spatial AI</td>
+        </tr>
+        <tr>
+          <td>Cesar Cadena</td>
+          <td>TBD (confirmed)</td>
+        </tr>
+        <tr>
+          <td>10:10 - 10:50</td>
+          <td colspan="2">Coffee Break & 1st Poster Session</td>
+          <td>Semantic mapping and world representations</td>
+        </tr>
+        <tr>
+          <td rowspan="3">10:50 - 12:20</td>
+          <td rowspan="3">Speaker Session 2 <br/> Semantic Representations</td>
+          <td>Luca Carlone</td>
+          <td>Task-Aware World Models for robotics</td>
+        </tr>
+        <tr>
+          <td>Bernadette Bucher</td>
+          <td>Building visual representations with foundation models for mobile manipulation</td>
+        </tr>
+        <tr>
+          <td>David Hsu</td>
+          <td>Open Scene Graphs for Open World Object-Goal Navigation</td>
+        </tr>
+        <tr>
+          <td>12:20 - 13:00</td>
+          <td>Panel 1</td>
+          <td> TBD </td>
+          <td>Questions 1 2 3 4 (Carlone, Bucher, Hsu)</td>
+        </tr>
+        <tr>
+          <td>13:00 - 14:00</td>
+          <td colspan="3">Lunch break</td>
+        </tr>
+        <tr>
+          <td rowspan="2">14:00 - 15:00</td>
+          <td rowspan="2">Speaker Session 3 <br/> From structured to unstructured</td>
+          <td>Sebastian Scherer</td>
+          <td>Pushing the horizon: how to scale semantic mapping and navigation beyond indoor environments</td>
+        </tr>
+        <tr>
+          <td>Lu Gan</td>
+          <td>Semantic Mapping and Navigation in Unknown, Unstructured Environments</td>
+        </tr>
+        <tr>
+          <td>15:00 - 15:40</td>
+          <td colspan="3">Coffee Break & 2nd Poster Session</td>
+        </tr>
+        <tr>
+          <td rowspan="2">15:40 - 16:40</td>
+          <td rowspan="2">Speaker Session 4 <br/> Semantic-guided navigation and exploration</td>
+          <td>Kostas Alexis</td>
+          <td>Semantics-aware Predictive Inspection Path Planning</td>
+        </tr>
+        <tr>
+          <td class="text-center" >Dhruv Shah</td>
+          <td>Lessons from Scaling up Multimodal Navigation Policies</td>
+        </tr>
+        <tr>
+          <td>16:40 - 17:20</td>
+          <td>Panel 2</td>
+          <td>TBD</td>
+          <td>Questions 5 6 7 (Scherer, Gan, Alexis, Shah)</td>
+        </tr>
+        <tr>
+          <td>17:20 - 17:30</td>
+          <td colspan="2">Final remarks</td>
+          <td>Recap of the day and open Q&A</td>
+        </tr>
+      </tbody>
+      </table>
+    </div>
   </section>
  
   <footer>
