--- a/sections/program.html
+++ b/sections/program.html
@@ -27,14 +27,14 @@
 
   <section id="program">
     <div class="table-container shadow-lg rounded-lg">
-      <h1 class="text-3xl font-bold text-center py-6 bg-white rounded-t-lg border-b border-gray-200">Workshop Program Schedule</h1>
+      <h2>Workshop Program Schedule</h2>
       <table>
       <thead>
         <tr>
-          <th class="rounded-tl-lg">Time</th>
+          <th>Time</th>
           <th>Type</th>
           <th>Presenter</th>
-          <th class="rounded-tr-lg">Talk</th>
+          <th>Talk</th>
         </tr>
       </thead>
       <tbody>
