--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- Speaker -->
     <a href="https://www.doc.ic.ac.uk/~ajd/" target="_blank" class="speaker-card">
-      <img src="/images/speakers/davison.png" alt="Andrew Davison" />
+      <img src="/images/speakers/davison.jpg" alt="Andrew Davison" />
       <div class="speaker-info">
         <h3>Andrew Davison</h3>
         <p><strong>Imperial College London</strong></p>
