--- a/sections/program.html
+++ b/sections/program.html
@@ -16,12 +16,12 @@
 
   <nav id="nav" class="sticky-nav">
     <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/index.html#speakers">Speakers</a></li>
-      <li><a href="/index.html#organizers">Organizers</a></li>
-      <li><a href="/index.html#contact">Contact</a></li>
-      <li><a href="/sections/cfp.html">Call for Papers</a></li>
-      <li><a href="/sections/program.html">Program</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html#speakers">Speakers</a></li>
+      <li><a href="index.html#organizers">Organizers</a></li>
+      <li><a href="index.html#contact">Contact</a></li>
+      <li><a href="sections/cfp.html">Call for Papers</a></li>
+      <li><a href="sections/program.html">Program</a></li>
     </ul>
   </nav>
 
