--- a/sections/cfp.html
+++ b/sections/cfp.html
@@ -20,8 +20,8 @@
       <li><a href="../index.html#speakers">Speakers</a></li>
       <li><a href="../index.html#organizers">Organizers</a></li>
       <li><a href="../index.html#contact">Contact</a></li>
-      <li><a href="sections/cfp.html">Call for Papers</a></li>
-      <li><a href="sections/program.html">Program</a></li>
+      <li><a href="cfp.html">Call for Papers</a></li>
+      <li><a href="program.html">Program</a></li>
     </ul>
   </nav>
   
