--- a/sections/program.html
+++ b/sections/program.html
@@ -27,7 +27,7 @@
 
   <section id="program">
     <div class="table-container shadow-lg rounded-lg">
-      <h2>Workshop Program Schedule</h2>
+      <h2>Workshop Program Schedule (tentative)</h2>
       <table>
       <thead>
         <tr>
